--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -68,7 +68,7 @@
   <img src="Banner.png" class="img-fluid" alt="This is the banner" id="bannerhead">
     <h1 class="title">Aaron Wright's Resume!</h1>
     <div class="col-lg-6 mx-auto">
-      <p class="fjalla-one-regular">With works across digital, print and audio, I'm a journalist that has dabbled in a lot of fields, yet retains professional
+      <p class="bodytext">With works across digital, print and audio, I'm a journalist that has dabbled in a lot of fields, yet retains professional
         and highly trained skills from each of these fields. With me on your team, you'll get a fantastic multimedia journalist and a better teammate.
         I'll put you on fr!</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
