--- a/Resume-Project/aaron-wright-resume.html
+++ b/Resume-Project/aaron-wright-resume.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-      <title>Aaron "A.C." Wright's Resume</title>
+      <title>Aaron "A.C." Wright's Portfolio</title>
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta name="description" content="#MerrillMade from UMD">
       <meta name="author" content="Aaron C. Wright">
@@ -68,9 +68,7 @@
   <img src="Banner.png" class="img-fluid" alt="This is the banner" id="bannerhead">
     <h1 class="bannertitle">Aaron Wright's Resume!</h1>
     <div class="col-lg-6 mx-auto">
-      <p class="bodytext">With works across digital, print and audio, I'm a journalist that has dabbled in a lot of fields, yet retains professional
-        and highly trained skills from each of these fields. With me on your team, you'll get a fantastic multimedia journalist and a better teammate.
-        I'll put you on fr!</p>
+      <p class="bodytext">With works across digital, print and audio, I'm a journalist that has dabbled in a lot of fields, yet retains professional and highly trained skills from each of these fields. As you scroll through this portfolio, you'll see a multimedia-skilled journalist and a capable leader, which has its roots from being an Eagle Scout. With me on your team, you'll get a fantastic journalist and a better teammate. I'll put you on fr!</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
       </div>
     </div>
@@ -206,12 +204,7 @@
   
       <div class="col-md-6" id="about-me">
         <h1 class="title">About Me.</h1>
-        <p class="bodytext">A 2024 graduate from the University of Maryland, College Park, Aaron Carter Wright earned a degree in journalism and a certificate
-          in African American and Africana Studies. As you scroll through his resume, you'll see a multimedia-skilled journalist and a capable leader,
-          which has its roots from being an Eagle Scout. Outside of journalism, Aaron is an avid Blerd/geek (Black nerd, for the uninitiated), having a wide range
-          of interests and knowledge in anime, astronomy, comics, manga, model-kit building (Legos and Gundam), movies, television and video games. He's also a lifelong
-          reader, a fan of trivia, a staunch media critic and advocate for civil and human rights: domestic or international. 
-          If you see me, ask me about African Diasporic Martial Arts!
+        <p class="bodytext">A 2024 graduate from the University of Maryland, College Park, Aaron Carter Wright earned a degree in journalism and a certificate in African American and Africana Studies. Outside of journalism, Aaron is an avid Blerd/geek (Black nerd, for the uninitiated), having a wide range of interests and knowledge in anime, astronomy, comics, manga, model-kit building (Legos and Gundam), movies, television and video games. He's also a lifelong reader, a fan of trivia, a staunch media critic and advocate for civil and human rights: domestic or international. If you see me, ask me about African Diasporic Martial Arts!
         </p>
       </div>
     </div>
